<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>custom_executor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="packt@todo.todo">packt</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>packt_rclpy_demo</build_depend>
  <!-- <build_depend>examples_rclpy_executors</build_depend> -->

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
